Minor fixes (#1005)
* correct cloud-download/upload icon CSS selectors

* fix scope tooltip in logger appearing offscreen

* open logger/dashboard links adjacent to current tab (match uBO's behaviour)

* opera: fix manifest version not being updated

Version code copied from tools/make-chromium-meta.py

* fix https://www.reddit.com/r/uBlockOrigin/comments/9gwrna/when_you_right_click_and_go_to_options_it_keeps/

source:
* https://github.com/gorhill/uBlock/commit/6dd6dc5f1db047b970882b3b88cef81553473ed3

* remove unused "processReferer" setting

It was changed to a matrix switch in https://github.com/gorhill/uMatrix/commit/5d8bae3da2fae6a8a3d551090b521725dac7c10c

* remove unused source code

source:
* https://github.com/gorhill/uBlock/commit/f516cd3d2691be9ab6a166cda61fe03d834b26ef
* https://github.com/gorhill/uBlock/commit/0503f52b1e0e40e7d857444986498f59aa440540

* remove bold version of Roboto font (unused from HTTPSB)

* correct FontAwesome license after change from v5 back to v4.7

License copied from https://github.com/gorhill/uBlock/commit/bb737e29d5ea77a5a6245f484c1cb680455efc0b

* fix build scripts after https://github.com/gorhill/uMatrix/commit/c0f4abfd00f758cb423a0d20c50d25716ff059a0

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,12 +7,6 @@
 @font-face {
   font-family: 'httpsb';
   font-style: normal;
-  font-weight: bold;
-  src: local('httpsb'), url(fonts/Roboto_Condensed/RobotoCondensed-Bold.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'httpsb';
-  font-style: normal;
   font-weight: 100;
   src: local('httpsb'), url(fonts/Roboto_Condensed/RobotoCondensed-Light.ttf) format('truetype');
 }
